--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="Yair Even-Or">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="/dist/tagify.css">
+        <link rel="stylesheet" href="dist/tagify.css">
         <style>
           html, body{ min-height:100%; scroll-behavior: smooth; }
           body{
