--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
                       <summary></summary>
                       <h3>HTML</h3>
 <pre class="language-markup"><code>&lt;textarea name='tags2' placeholder='Movie names'>
-    [{value:"The Good, the Bad and the Ugly"}, {"value":"The Matrix"}
+    [{"value":"The Good, the Bad and the Ugly"}, {"value":"The Matrix"}]
 &lt;/textarea></code></pre>
                       <h3>JAVASCRIPT</h3>
                       <script>renderPRE(document.currentScript, "textarea")</script>
