--- a/index.html
+++ b/index.html
@@ -540,9 +540,8 @@
                     <details>
                       <summary></summary>
                       <h3>HTML</h3>
-<pre class="language-markup"><code>&lt;textarea name='tags2' placeholder='Movie names'>
-    The Matrix, Pulp Fiction, Mad Max
-&lt;/textarea></code></pre>
+<pre class="language-markup"><code>&lt;input class='customLook' value='some.name@website.com'>&lt;button type="button">+&lt;/button>
+</code></pre>
                       <h3>JAVASCRIPT</h3>
                       <script>renderPRE(document.currentScript, "customLook")</script>
                       <h3>CSS</h3>
