added link to further info regarding giving colors to tags

--- a/index.html
+++ b/index.html
@@ -981,6 +981,7 @@
                     </p>
                     <p>
                         Each (valid) tag gets a random color, via the <code>transformTag</code> callback which modifies the tag's data object before creating the tag element.
+                        Another way of giving colors to tags is <a href='https://github.com/yairEO/tagify/issues/644'>discussed here</a>.
                     </p>
                     <p>
                         HTML5 <code>pattern</code> attribute is automatically used to validate tags.<br>
