--- a/test/test.html
+++ b/test/test.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="../dist/tagify.css">
 
-        <script src="../dist/tagify.js"></script>
+        <script src="../dist/tagify.min.js"></script>
 
         <style>
             body{ font: 16px Arial; }
