--- a/index.html
+++ b/index.html
@@ -962,6 +962,7 @@
     height: 16px;
     white-space: normal;
     border-radius: 50%;
+    background: silver;
     margin-right: 5px;
     transition: .12s ease-out;
 }
@@ -1717,7 +1718,7 @@ function tagTemplate(tagData){
             <x title='' class='tagify__tag__removeBtn' role='button' aria-label='remove tag'></x>
             <div>
                 <div class='tagify__tag__avatar-wrap'>
-                    <img src="${tagData.avatar}">
+                    <img onerror="this.style.visibility='hidden'" src="${tagData.avatar}">
                 </div>
                 <span class='tagify__tag-text'>${tagData.name}</span>
             </div>
@@ -1733,7 +1734,7 @@ function suggestionItemTemplate(tagData){
             role="option">
             ${ tagData.avatar ? `
             <div class='tagify__dropdown__item__avatar-wrap'>
-                <img src="${tagData.avatar}">
+                <img onerror="this.style.visibility='hidden'" src="${tagData.avatar}">
             </div>` : ''
             }
             <strong>${tagData.name}</strong>
@@ -1870,7 +1871,7 @@ var tagify = new Tagify(document.querySelector('input[name=tags3-1]'), {
                         <x title='remove tag' class='tagify__tag__removeBtn'></x>
                         <div>
                             ${tagData.code ?
-                            `<img onerror="this.style.visibility = 'hidden'" src='https://lipis.github.io/flag-icon-css/flags/4x3/${tagData.code.toLowerCase()}.svg'>` : ''
+                            `<img onerror="this.style.visibility='hidden'" src='https://lipis.github.io/flag-icon-css/flags/4x3/${tagData.code.toLowerCase()}.svg'>` : ''
                             }
                             <span class='tagify__tag-text'>${tagData.value}</span>
                         </div>
